tp/5.0/demo-app-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 
spec:
  ingressClassName: aws-ingress-class
  rules:
  - host: ${USER_NAME}.el-khayali.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ${USER_NAME}
            port:
              number: 8080
